--- a/index.html
+++ b/index.html
@@ -8,17 +8,18 @@
     <div id="headline">
         <h1 style = " border-bottom : solid ">Re'start プライバシーポリシー 2022/11/13</h1>
         <p style="padding-left:40px">このプライバシーポリシーは、Re'start開発者(みなと#0928)が提供するBOT「Re'start-Reboot#3103」での収集する情報について定めたものです。<br>
-            また、以下の内容以外に情報の統計のため、告知なしにサーバーやユーザーを取得する場合があります。(保存はしません。)
+            また、以下の内容以外に情報の統計のため、告知なしにサーバーやユーザーを取得する場合があります。(保存はしません。)<br>
+            データの削除申請は<a href="https://discord.gg/WUvB3bpsv7">公式サーバー</a>で受け付けます。
         </p>
     </div>
     <div class="main">
         <p style = " border-bottom : solid #EC0000"><font size="5">ユーザー(メンバー)情報</font></p>
-        <p style="padding-left:40px">以下のユーザー(メンバー)情報を収集し、データベースで保存します。</p>
+        <p style="padding-left:40px">以下のユーザー(メンバー)情報を収集し、データベースに保存します。</p>
         <p style="padding-left:60px">・ユーザーID</p>
     </div>
     <div class="main">
         <p style = " border-bottom : solid #EC0000"><font size="5">チャンネル情報</font></p>
-        <p style="padding-left:40px">以下のチャンネル情報を収集し、データベースで保存します。</p>
+        <p style="padding-left:40px">以下のチャンネル情報を収集し、データベースに保存します。</p>
         <p style="padding-left:60px">・チャンネルID</p>
         <p style="padding-left:40px">サーバーからBOTが退出した場合、敵のLV以外の情報は削除されます。<br>
             チャンネルが削除された場合はそのチャンネルにかかわるすべての情報が削除されます。
@@ -34,6 +35,7 @@
     </div>
     <div class="main">
         <p style="padding-left:80px"><br><hr><a href="https://discord.com/api/oauth2/authorize?client_id=906452650822881321&permissions=1073835080&scope=bot">Re'start招待URL</a></p>
+        <p style="padding-left:80px"><a href="https://ssscfw.github.io/Restart-Terms-of-Service/">利用規約</a></p>
     </div>
 </body>
 </html>
