--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
         </p>
     </div>
     <div class="main">
+        <p style = " border-bottom : solid #EC0000"><font size="5">個人情報</font></p>
+        <p style="padding-left:40px">Webサイトでの個人情報の扱いは以下の通りです。</p>
+        <p style="padding-left:60px">・決済時のクレジットカード等の情報は本サービスで管理しません。</p>
+        <p style="padding-left:60px">・入力されたメールアドレスはStripe側のダッシュボードで開発者が確認することができます。(本サービスでは管理しません。)</p>
+    </div>
+    <div class="main">
         <p style = " border-bottom : solid #EC0000"><font size="5">ユーザー(メンバー)情報</font></p>
         <p style="padding-left:40px">以下のユーザー(メンバー)情報を収集し、データベースに保存します。</p>
         <p style="padding-left:60px">・ユーザーID</p>
