--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>Re'start プライバシーポリシー</title>
+  <title>Re'start プライバシーポリシー (2024/6/4 更新)</title>
 </head>
 <body>
     <div id="headline">
