--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
     <div class="main">
         <p style = " border-bottom : solid #EC0000"><font size="5">個人情報</font></p>
-        <p style="padding-left:40px">Webサイトでの個人情報の扱いは以下の通りです。</p>
+        <p style="padding-left:40px">Webサイトでの個人情報の扱いは以下の通りです。これらのデータは本サービス内でのみ使用されます。</p>
         <p style="padding-left:60px">・決済時のクレジットカード等の情報は本サービスで管理しません。</p>
         <p style="padding-left:60px">・入力されたメールアドレスはStripe側のダッシュボードで開発者が確認することができます。(本サービスでは管理しません。)</p>
     </div>
